--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "url": "https://github.com/NicolasRitouet/kinoa.git"
   },
   "dependencies": {
+    "@types/jasmine": "^3.3.1",
+    "@types/mkdirp": "^0.5.2",
     "deployd": "~0.8.0",
     "dpd-fileupload": "0.0.17"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/cucumber": "^4.0.4",
     "@types/mocha": "^5.2.5",
     "angular": "^1.7.5",
     "angular-mocks": "^1.7.5",
     "angular-ui-router": "^1.0.20",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "cucumber": "^5.0.3",
+    "cucumber-html-reporter": "^4.0.4",
     "gulp": "^3.6.2",
     "gulp-concat": "^2.2.0",
     "gulp-jshint": "^1.6.1",
@@ -28,20 +34,25 @@
     "gulp-shell": "^0.5.0",
     "gulp-spawn": "^0.3.0",
     "gulp-uglify": "^1.4.2",
+    "jasmine": "^3.3.1",
     "jasmine-core": "^3.3.0",
+    "jasminewd2": "^2.2.0",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
     "karma-spec-reporter": "0.0.32",
     "mocha": "^5.2.0",
+    "protractor": "^5.4.1",
+    "protractor-cucumber-framework": "^6.1.1",
     "ts-node": "^7.0.1",
-    "typescript": "^3.2.1"
+    "typescript": "^3.2.2"
   },
   "scripts": {
     "start_dpd": "node node_modules/deployd/bin/dpd"
   },
   "engines": {
     "node": ">= 4",
-    "npm": "1.2.x"
+    "npm": "1.2.x",
+    "yarn": "^1.12.3"
   }
 }
